js/src/tests/test262/staging/sm/Error/prototype.js
const
nativeErrors
=
[
EvalError
RangeError
ReferenceError
SyntaxError
TypeError
URIError
]
;
assert
.
sameValue
(
Reflect
.
getPrototypeOf
(
Error
.
prototype
)
Object
.
prototype
)
for
(
const
error
of
nativeErrors
)
{
assert
.
sameValue
(
Reflect
.
getPrototypeOf
(
error
.
prototype
)
Error
.
prototype
)
;
}
reportCompare
(
0
0
)
;
